--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 #articulo{padding: 25px;border: solid ;width: 400px; height: 500px;}
-div{background-color: rgb(46, 43, 43);}
+div{background-color: rgb(46, 43, 43);border-radius: 5%;}
 h1{color: rgb(115, 124, 133);}
 h2{color: aliceblue;}
 h3{color: darkorange;}
 h4{color: aliceblue;}
 img{text-align: left;float: left;border-radius: 50%;}
+span{color: white;}
